[[bin]]
name = "moonrabbit"
path = "src/main.rs"

[package]
name = "moonrabbit"
description = "Implementation of a https://moonrabbit.com network node"
license = "GPL-3.0-only"
version = "0.9.1"
authors = ["Moon Rabbit <admin@moonrabbit.com>"]
edition = "2018"
readme = "README.md"

[dependencies]
cli = { package = "moonrabbit-cli", path = "cli" }
color-eyre = "0.5.10"
thiserror = "1.0.23"
futures = "0.3.12"
service = { package = "moonrabbit-service", path = "node/service" }
moonrabbit-util-mem = { version = "*", default-features = false, features = ["jemalloc-global"] }

[dev-dependencies]
assert_cmd = "1.0.2"
nix = "0.19.1"
tempfile = "3.2.0"

[workspace]
members = [
	"bridges/primitives/chain-moonrabbit",
	"bridges/primitives/runtime",
	"cli",
	"core-primitives",
	"erasure-coding",
	"primitives",
	"runtime/common",
	"runtime/common/slot_range_helper",
	"runtime/parachains",
	"runtime/moonrabbit",
	"runtime/test-runtime",
	"statement-table",
	"xcm",
	"xcm/xcm-builder",
	"xcm/xcm-executor",
	"xcm/pallet-xcm",
	"node/collation-generation",
	"node/core/approval-voting",
	"node/core/av-store",
	"node/core/backing",
	"node/core/bitfield-signing",
	"node/core/candidate-selection",
	"node/core/candidate-validation",
	"node/core/chain-api",
	"node/core/parachains-inherent",
	"node/core/provisioner",
	"node/core/pvf",
	"node/core/runtime-api",
	"node/network/approval-distribution",
	"node/network/bridge",
	"node/network/protocol",
	"node/network/statement-distribution",
	"node/network/bitfield-distribution",
	"node/network/availability-distribution",
	"node/network/availability-recovery",
	"node/network/collator-protocol",
	"node/network/gossip-support",
	"node/overseer",
	"node/primitives",
	"node/service",
	"node/subsystem",
	"node/subsystem/dispatch-gen",
	"node/subsystem-test-helpers",
	"node/subsystem-util",
	"node/jaeger",
	"node/metered-channel",
	"node/test/client",
	"node/test/service",
	"parachain/test-parachains",
	"parachain/test-parachains/adder",
	"parachain/test-parachains/adder/collator",
]

[badges]
maintenance = { status = "actively-developed" }

# make sure dev builds with backtrace do
# not slow us down
[profile.dev.package.backtrace]
opt-level = 3

[profile.release]
panic = "unwind"

[features]
runtime-benchmarks=["cli/runtime-benchmarks"]
try-runtime = ["cli/try-runtime"]

# Configuration for building a .deb package - for use with `cargo-deb`
[package.metadata.deb]
name = "moonrabbit"
extended-description = "Implementation of a https://moonrabbit.com network node"
section = "misc"
maintainer = "admin@moonrabbit.com"
license-file = ["LICENSE", "0"]
# https://www.debian.org/doc/debian-policy/ch-maintainerscripts.html
maintainer-scripts = "scripts/packaging/deb-maintainer-scripts"
assets = [
	["target/release/moonrabbit", "/usr/bin/", "755"],
	["scripts/packaging/moonrabbit.service", "/lib/systemd/system/", "644"]
]
conf-files = [
	"/etc/default/moonrabbit"
]

# Configuration for building an .rpm package - for use with `cargo-rpm`
[package.metadata.rpm]
package = "moonrabbit"

[package.metadata.rpm.cargo]
buildflags = ["--release"]

[package.metadata.rpm.targets]
moonrabbit = { path = "/usr/bin/moonrabbit" }

[package.metadata.rpm.files]
"../scripts/packaging/moonrabbit.service" = { path = "/usr/lib/systemd/system/moonrabbit.service", mode = "644" }
