[package]
name = "moonrabbit-jurisdiction"
version = "0.9.1"
authors = ["Moon Rabbit <admin@moonrabbit.com>"]
description = "Types and utilities for creating and working with jurisdictions"
edition = "2018"

[dependencies]
# note: special care is taken to avoid inclusion of `sp-io` externals when compiling
# this crate for WASM. This is critical to avoid forcing all parachain WASM into implementing
# various unnecessary Substrate-specific endpoints.
moonrabbit-scale-codec = { version = "2.0.0", default-features = false, features = [ "derive" ] }
moonrabbit-util-mem = { version = "0.9.0", optional = true }
sp-std = { git = "https://github.com/moonRabbitAZ/substrate", branch = "master", default-features = false }
sp-runtime = { git = "https://github.com/moonRabbitAZ/substrate", branch = "master", default-features = false }
sp-core = { git = "https://github.com/moonRabbitAZ/substrate", branch = "master", default-features = false }
moonrabbit-core-primitives = { path = "../core-primitives", default-features = false }
derive_more = "0.99.11"

# all optional crates.
serde = { version = "1.0.117", default-features = false, features = [ "derive" ], optional = true }

[features]
default = ["std"]
wasm-api = []
std = [
	"moonrabbit-scale-codec/std",
	"serde/std",
	"sp-std/std",
	"sp-runtime/std",
	"sp-core/std",
	"moonrabbit-util-mem",
	"moonrabbit-core-primitives/std",
]
