[package]
name = "moonrabbit-statement-table"
version = "0.9.1"
authors = ["Moon Rabbit <admin@moonrabbit.com>"]
edition = "2018"

[dependencies]
moonrabbit-scale-codec = { version = "2.0.0", default-features = false, features = ["derive"] }
sp-core = { git = "https://github.com/moonRabbitAZ/substrate", branch = "master" }
primitives = { package = "moonrabbit-primitives", path = "../primitives" }
