[package]
name = "xcm"
version = "0.9.1"
authors = ["moonrabbit Technologies x<admin@moonrabbit.io>"]
description = "The basic XCM datastructures."
edition = "2018"

[dependencies]
impl-trait-for-tuples = "0.2.0"
moonrabbit-scale-codec = { version = "2.0.0", default-features = false, features = [ "derive" ] }
derivative = {version = "2.2.0", default-features = false, features = [ "use_core" ] }

[features]
default = ["std"]
wasm-api = []
std = [
	"moonrabbit-scale-codec/std",
]
