[package]
name = "erasure_coding_fuzzer"
version = "0.1.0"
authors = ["Moon Rabbit <admin@moonrabbit.com>"]
edition = "2018"

[dependencies]
moonrabbit-erasure-coding = { path = ".." }
honggfuzz = "0.5"
primitives = { package = "moonrabbit-node-primitives", path = "../../node/primitives/" }

[[bin]]
name = "reconstruct"
path = "src/reconstruct.rs"

[[bin]]
name = "round_trip"
path = "src/round_trip.rs"

[workspace]
