[package]
name = "moonrabbit-node-jaeger"
version = "0.1.0"
authors = ["Moon Rabbit <admin@moonrabbit.com>"]
edition = "2018"
description = "moonrabbit Jaeger primitives"

[dependencies]
async-std = "1.8.0"
mick-jaeger = "0.1.4"
lazy_static = "1.4"
parking_lot = "0.11.1"
moonrabbit-primitives = { path = "../../primitives" }
moonrabbit-node-primitives = { path = "../primitives" }
sc-network = { git = "https://github.com/moonRabbitAZ/substrate", branch = "master" }
sp-core = { git = "https://github.com/moonRabbitAZ/substrate", branch = "master" }
thiserror = "1.0.23"
log = "0.4.13"
moonrabbit-scale-codec = { version = "2.0.0", default-features = false }
