[package]
name = "moonrabbit-node-primitives"
version = "0.1.0"
authors = ["Moon Rabbit <admin@moonrabbit.com>"]
edition = "2018"
description = "Primitives types for the Node-side"

[dependencies]
futures = "0.3.12"
moonrabbit-primitives = { path = "../../primitives" }
moonrabbit-statement-table = { path = "../../statement-table" }
moonrabbit-scale-codec = { version = "2.0.0", default-features = false, features = ["derive"] }
runtime_primitives = { package = "sp-runtime", git = "https://github.com/moonRabbitAZ/substrate", branch = "master", default-features = false }
sp-core = { git = "https://github.com/moonRabbitAZ/substrate", branch = "master" }
sp-application-crypto = { git = "https://github.com/moonRabbitAZ/substrate", branch = "master" }
sp-consensus-vrf = { git = "https://github.com/moonRabbitAZ/substrate", branch = "master" }
sp-consensus-babe = { git = "https://github.com/moonRabbitAZ/substrate", branch = "master" }
sp-maybe-compressed-blob  = { git = "https://github.com/moonRabbitAZ/substrate", branch = "master" }
moonrabbit-parachain = { path = "../../parachain", default-features = false }
schnorrkel = "0.9.1"
thiserror = "1.0.22"
serde = { version = "1.0.123", features = ["derive"] }

[target.'cfg(not(target_os = "unknown"))'.dependencies]
zstd = "0.6.0"
