[package]
name = "moonrabbit-node-subsystem"
version = "0.1.0"
authors = ["Moon Rabbit <admin@moonrabbit.com>"]
edition = "2018"
description = "Subsystem traits and message definitions"

[dependencies]
async-std = "1.8.0"
async-trait = "0.1.42"
derive_more = "0.99.11"
futures = "0.3.12"
futures-timer = "3.0.2"
mick-jaeger = "0.1.2"
lazy_static = "1.4"
tracing = "0.1.25"
moonrabbit-scale-codec = { version = "2.0.0", default-features = false, features = ["derive"] }
parking_lot = "0.11.1"
pin-project = "1.0.4"
moonrabbit-node-primitives = { path = "../primitives" }
moonrabbit-node-network-protocol = { path = "../network/protocol" }
moonrabbit-primitives = { path = "../../primitives" }
moonrabbit-statement-table = { path = "../../statement-table" }
moonrabbit-node-jaeger = { path = "../jaeger" }
moonrabbit-procmacro-subsystem-dispatch-gen = { path = "dispatch-gen" }
sc-network = { git = "https://github.com/moonRabbitAZ/substrate", branch = "master" }
smallvec = "1.6.1"
sp-core = { git = "https://github.com/moonRabbitAZ/substrate", branch = "master" }
substrate-prometheus-endpoint = { git = "https://github.com/moonRabbitAZ/substrate", branch = "master" }
thiserror = "1.0.23"
log = "0.4.13"

[dev-dependencies]
assert_matches = "1.4.0"
async-trait = "0.1.42"
futures = { version = "0.3.12", features = ["thread-pool"] }
moonrabbit-node-subsystem-test-helpers = { path = "../subsystem-test-helpers" }
