[package]
name = "moonrabbit-node-core-approval-voting"
version = "0.1.0"
authors = ["Moon Rabbit <admin@moonrabbit.com>"]
edition = "2018"

[dependencies]
futures = "0.3.8"
futures-timer = "3.0.2"
moonrabbit-scale-codec = { version = "2.0.0", default-features = false, features = ["bit-vec", "derive"] }
tracing = "0.1.25"
bitvec = { version = "0.20.1", default-features = false, features = ["alloc"] }
merlin = "2.0"
schnorrkel = "0.9.1"
kvdb = "0.9.0"
derive_more = "0.99.1"

moonrabbit-node-subsystem = { path = "../../subsystem" }
moonrabbit-node-subsystem-util = { path = "../../subsystem-util" }
moonrabbit-overseer = { path = "../../overseer" }
moonrabbit-primitives = { path = "../../../primitives" }
moonrabbit-node-primitives = { path = "../../primitives" }
moonrabbit-node-jaeger = { path = "../../jaeger" }

sc-client-api = { git = "https://github.com/moonRabbitAZ/substrate", branch = "master", default-features = false }
sc-keystore = { git = "https://github.com/moonRabbitAZ/substrate", branch = "master", default-features = false }
sp-consensus = { git = "https://github.com/moonRabbitAZ/substrate", branch = "master", default-features = false }
sp-consensus-slots = { git = "https://github.com/moonRabbitAZ/substrate", branch = "master", default-features = false }
sp-blockchain = { git = "https://github.com/moonRabbitAZ/substrate", branch = "master", default-features = false }
sp-application-crypto = { git = "https://github.com/moonRabbitAZ/substrate", branch = "master", default-features = false, features = ["full_crypto"] }
sp-runtime = { git = "https://github.com/moonRabbitAZ/substrate", branch = "master", default-features = false }

[dev-dependencies]
parking_lot = "0.11.1"
rand_core = "0.5.1" # should match schnorrkel
sp-keyring = { git = "https://github.com/moonRabbitAZ/substrate", branch = "master" }
sp-keystore = { git = "https://github.com/moonRabbitAZ/substrate", branch = "master" }
sp-core = { git = "https://github.com/moonRabbitAZ/substrate", branch = "master" }
sp-consensus-babe = { git = "https://github.com/moonRabbitAZ/substrate", branch = "master" }
maplit = "1.0.2"
moonrabbit-node-subsystem-test-helpers = { path = "../../subsystem-test-helpers" }
assert_matches = "1.4.0"
kvdb-memorydb = "0.9.0"
