[package]
name = "moonrabbit-node-core-av-store"
version = "0.1.0"
authors = ["Moon Rabbit <admin@moonrabbit.com>"]
edition = "2018"

[dependencies]
futures = "0.3.12"
futures-timer = "3.0.2"
kvdb = "0.9.0"
thiserror = "1.0.23"
tracing = "0.1.25"
bitvec = "0.20.1"

moonrabbit-scale-codec = { version = "2.0.0", features = ["derive"] }
erasure = { package = "moonrabbit-erasure-coding", path = "../../../erasure-coding" }
moonrabbit-subsystem = { package = "moonrabbit-node-subsystem", path = "../../subsystem" }
moonrabbit-node-subsystem-util = { path = "../../subsystem-util" }
moonrabbit-overseer = { path = "../../overseer" }
moonrabbit-primitives = { path = "../../../primitives" }
moonrabbit-node-primitives = { path = "../../primitives" }

[dev-dependencies]
log = "0.4.13"
env_logger = "0.8.2"
assert_matches = "1.4.0"
kvdb-memorydb = "0.9.0"

sp-core = { git = "https://github.com/moonRabbitAZ/substrate", branch = "master" }
moonrabbit-node-subsystem-util = { path = "../../subsystem-util" }
moonrabbit-node-subsystem-test-helpers = { path = "../../subsystem-test-helpers" }
sp-keyring = { git = "https://github.com/moonRabbitAZ/substrate", branch = "master" }
parking_lot = "0.11.1"
