[package]
name = "moonrabbit-node-core-backing"
version = "0.1.0"
authors = ["Moon Rabbit <admin@moonrabbit.com>"]
edition = "2018"

[dependencies]
futures = "0.3.12"
sp-keystore = { git = "https://github.com/moonRabbitAZ/substrate", branch = "master" }
moonrabbit-primitives = { path = "../../../primitives" }
moonrabbit-node-primitives = { path = "../../primitives" }
moonrabbit-subsystem = { package = "moonrabbit-node-subsystem", path = "../../subsystem" }
moonrabbit-node-subsystem-util = { path = "../../subsystem-util" }
erasure-coding = { package = "moonrabbit-erasure-coding", path = "../../../erasure-coding" }
statement-table = { package = "moonrabbit-statement-table", path = "../../../statement-table" }
bitvec = { version = "0.20.1", default-features = false, features = ["alloc"] }
tracing = "0.1.25"
thiserror = "1.0.23"

[dev-dependencies]
sp-core = { git = "https://github.com/moonRabbitAZ/substrate", branch = "master" }
sp-application-crypto = { git = "https://github.com/moonRabbitAZ/substrate", branch = "master" }
sp-keyring = { git = "https://github.com/moonRabbitAZ/substrate", branch = "master" }
sc-keystore = { git = "https://github.com/moonRabbitAZ/substrate", branch = "master" }
sp-tracing = { git = "https://github.com/moonRabbitAZ/substrate", branch = "master" }
futures = { version = "0.3.12", features = ["thread-pool"] }
assert_matches = "1.4.0"
moonrabbit-node-subsystem-test-helpers = { path = "../../subsystem-test-helpers" }
