[package]
name = "moonrabbit-node-core-candidate-selection"
version = "0.1.0"
authors = ["Moon Rabbit <admin@moonrabbit.com>"]
edition = "2018"

[dependencies]
futures = "0.3.12"
tracing = "0.1.25"
thiserror = "1.0.23"

sp-keystore = { git = "https://github.com/moonRabbitAZ/substrate", branch = "master" }

moonrabbit-primitives = { path = "../../../primitives" }
moonrabbit-node-subsystem = { path = "../../subsystem" }
moonrabbit-node-primitives = { path = "../../primitives" }
moonrabbit-node-subsystem-util = { path = "../../subsystem-util" }

[dev-dependencies]
sp-core = { git = "https://github.com/moonRabbitAZ/substrate", branch = "master" }
moonrabbit-node-subsystem-test-helpers = { path = "../../subsystem-test-helpers" }
