[package]
name = "moonrabbit-node-core-candidate-validation"
version = "0.1.0"
authors = ["Moon Rabbit <admin@moonrabbit.com>"]
edition = "2018"

[dependencies]
async-trait = "0.1.42"
futures = "0.3.12"
tracing = "0.1.25"

sp-maybe-compressed-blob = { package = "sp-maybe-compressed-blob", git = "https://github.com/moonRabbitAZ/substrate", branch = "master" }
moonrabbit-scale-codec = { version = "2.0.0", default-features = false, features = ["bit-vec", "derive"] }

moonrabbit-primitives = { path = "../../../primitives" }
moonrabbit-parachain = { path = "../../../parachain" }
moonrabbit-node-primitives = { path = "../../primitives" }
moonrabbit-subsystem = { package = "moonrabbit-node-subsystem", path = "../../subsystem" }
moonrabbit-node-subsystem-util = { path = "../../subsystem-util" }

[target.'cfg(not(any(target_os = "android", target_os = "unknown")))'.dependencies]
moonrabbit-node-core-pvf = { path = "../pvf" }

[dev-dependencies]
sp-keyring = { git = "https://github.com/moonRabbitAZ/substrate", branch = "master" }
futures = { version = "0.3.12", features = ["thread-pool"] }
assert_matches = "1.4.0"
moonrabbit-node-subsystem-test-helpers = { path = "../../subsystem-test-helpers" }
sp-core = { git = "https://github.com/moonRabbitAZ/substrate", branch = "master" }
