[package]
name = "moonrabbit-node-core-runtime-api"
version = "0.1.0"
authors = ["Moon Rabbit <admin@moonrabbit.com>"]
edition = "2018"

[dependencies]
futures = "0.3.12"
tracing = "0.1.25"
memory-lru = "0.1.0"
moonrabbit-util-mem = { version = "0.9.0", default-features = false }

sp-api = { git = "https://github.com/moonRabbitAZ/substrate", branch = "master" }
sp-authority-discovery = { git = "https://github.com/moonRabbitAZ/substrate", branch = "master" }
sp-core = { git = "https://github.com/moonRabbitAZ/substrate", branch = "master" }
sp-consensus-babe = { git = "https://github.com/moonRabbitAZ/substrate", branch = "master" }

moonrabbit-primitives = { path = "../../../primitives" }
moonrabbit-subsystem = { package = "moonrabbit-node-subsystem", path = "../../subsystem" }
moonrabbit-node-subsystem-util = { path = "../../subsystem-util" }

[dev-dependencies]
sp-core = { git = "https://github.com/moonRabbitAZ/substrate", branch = "master" }
futures = { version = "0.3.12", features = ["thread-pool"] }
moonrabbit-node-subsystem-test-helpers = { path = "../../subsystem-test-helpers" }
moonrabbit-node-primitives = { path = "../../primitives" }
