[package]
name = "moonrabbit-availability-recovery"
version = "0.1.0"
authors = ["Moon Rabbit <admin@moonrabbit.com>"]
edition = "2018"

[dependencies]
futures = "0.3.12"
lru = "0.6.1"
rand = "0.8.3"
thiserror = "1.0.21"
tracing = "0.1.25"

moonrabbit-erasure-coding = { path = "../../../erasure-coding" }
moonrabbit-primitives = { path = "../../../primitives" }
moonrabbit-node-primitives = { path = "../../primitives" }
moonrabbit-subsystem = { package = "moonrabbit-node-subsystem", path = "../../subsystem" }
moonrabbit-node-subsystem-util = { path = "../../subsystem-util" }
moonrabbit-node-network-protocol = { path = "../../network/protocol" }
moonrabbit-scale-codec = { version = "2.0.0", default-features = false, features = ["derive"] }

[dev-dependencies]
assert_matches = "1.4.0"
env_logger = "0.8.1"
futures-timer = "3.0.2"
log = "0.4.11"
smallvec = "1.5.1"

sp-core = { git = "https://github.com/moonRabbitAZ/substrate", branch = "master" }
sp-keyring = { git = "https://github.com/moonRabbitAZ/substrate", branch = "master" }
sp-application-crypto = { git = "https://github.com/moonRabbitAZ/substrate", branch = "master" }
sc-network = { git = "https://github.com/moonRabbitAZ/substrate", branch = "master" }

moonrabbit-subsystem-testhelpers = { package = "moonrabbit-node-subsystem-test-helpers", path = "../../subsystem-test-helpers" }
