[package]
name = "moonrabbit-availability-bitfield-distribution"
version = "0.1.0"
authors = ["Moon Rabbit <admin@moonrabbit.com>"]
edition = "2018"

[dependencies]
futures = "0.3.12"
tracing = "0.1.25"
moonrabbit-primitives = { path = "../../../primitives" }
moonrabbit-subsystem = { package = "moonrabbit-node-subsystem", path = "../../subsystem" }
moonrabbit-node-subsystem-util = { path = "../../subsystem-util" }
moonrabbit-node-network-protocol = { path = "../../network/protocol" }

[dev-dependencies]
moonrabbit-node-subsystem-test-helpers = { path = "../../subsystem-test-helpers" }
bitvec = { version = "0.20.1", default-features = false, features = ["alloc"] }
sp-core = { git = "https://github.com/moonRabbitAZ/substrate", branch = "master" }
sp-application-crypto = { git = "https://github.com/moonRabbitAZ/substrate", branch = "master" }
sp-keystore = { git = "https://github.com/moonRabbitAZ/substrate", branch = "master" }
maplit = "1.0.2"
log = "0.4.13"
env_logger = "0.8.2"
assert_matches = "1.4.0"
