[package]
name = "moonrabbit-network-bridge"
version = "0.1.0"
authors = ["Moon Rabbit <admin@moonrabbit.com>"]
edition = "2018"

[dependencies]
async-trait = "0.1.42"
futures = "0.3.12"
tracing = "0.1.25"
moonrabbit-primitives = { path = "../../../primitives" }
moonrabbit-scale-codec = { version = "2.0.0", default-features = false, features = ["derive"] }
sc-authority-discovery = { git = "https://github.com/moonRabbitAZ/substrate", branch = "master" }
sc-network = { git = "https://github.com/moonRabbitAZ/substrate", branch = "master" }
sp-consensus = { git = "https://github.com/moonRabbitAZ/substrate", branch = "master" }
moonrabbit-subsystem = { package = "moonrabbit-node-subsystem", path = "../../subsystem" }
moonrabbit-node-network-protocol = { path = "../protocol" }
moonrabbit-node-subsystem-util = { path = "../../subsystem-util"}
strum = "0.20.0"
parking_lot = "0.11.1"

[dev-dependencies]
assert_matches = "1.4.0"
moonrabbit-node-subsystem-test-helpers = { path = "../../subsystem-test-helpers" }
sp-core = { git = "https://github.com/moonRabbitAZ/substrate", branch = "master" }
sp-keyring = { git = "https://github.com/moonRabbitAZ/substrate", branch = "master" }
futures-timer = "3"
