[package]
name = "moonrabbit-node-network-protocol"
version = "0.1.0"
authors = ["Moon Rabbit <admin@moonrabbit.com>"]
edition = "2018"
description = "Primitives types for the Node-side"

[dependencies]
moonrabbit-primitives = { path = "../../../primitives" }
moonrabbit-node-primitives = { path = "../../primitives" }
moonrabbit-node-jaeger = { path = "../../jaeger" }
moonrabbit-scale-codec = { version = "2.0.0", default-features = false, features = ["derive"] }
sc-network = { git = "https://github.com/moonRabbitAZ/substrate", branch = "master" }
strum = { version = "0.20", features = ["derive"] }
futures = "0.3.12"
thiserror = "1.0.23"
