[package]
name = "moonrabbit-statement-distribution"
version = "0.1.0"
authors = ["Moon Rabbit <admin@moonrabbit.com>"]
description = "Statement Distribution Subsystem"
edition = "2018"

[dependencies]
futures = "0.3.12"
tracing = "0.1.25"
moonrabbit-primitives = { path = "../../../primitives" }
sp-staking = { git = "https://github.com/moonRabbitAZ/substrate", branch = "master", default-features = false }
sp-keystore = { git = "https://github.com/moonRabbitAZ/substrate", branch = "master" }
sc-network = { git = "https://github.com/moonRabbitAZ/substrate", branch = "master" }
moonrabbit-subsystem = { package = "moonrabbit-node-subsystem", path = "../../subsystem" }
moonrabbit-node-primitives = { path = "../../primitives" }
moonrabbit-node-subsystem-util = { path = "../../subsystem-util" }
moonrabbit-node-network-protocol = { path = "../../network/protocol" }
arrayvec = "0.5.2"
indexmap = "1.6.1"
moonrabbit-scale-codec = { version = "2.0.0", default-features = false, features = ["derive"] }
thiserror = "1.0.23"

[dev-dependencies]
moonrabbit-node-subsystem-test-helpers = { path = "../../subsystem-test-helpers" }
assert_matches = "1.4.0"
sp-keyring = { git = "https://github.com/moonRabbitAZ/substrate", branch = "master" }
sp-core = { git = "https://github.com/moonRabbitAZ/substrate", branch = "master" }
sp-application-crypto = { git = "https://github.com/moonRabbitAZ/substrate", branch = "master" }
sp-keystore = { git = "https://github.com/moonRabbitAZ/substrate", branch = "master" }
sp-tracing = { git = "https://github.com/moonRabbitAZ/substrate", branch = "master" }
sc-keystore = { git = "https://github.com/moonRabbitAZ/substrate", branch = "master" }
futures-timer = "3.0.2"
